--- a/Ndexer.csproj
+++ b/Ndexer.csproj
@@ -119,6 +119,12 @@
   <ItemGroup>
     <None Include="icons\database_monitoring.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="icons\database_working_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icons\database_working_2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
