--- a/trunk/Ndexer.csproj
+++ b/trunk/Ndexer.csproj
@@ -63,16 +63,12 @@
       <DependentUpon>ConfigurationDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="DiskMonitor.cs" />
-    <Compile Include="IndexingStatusDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="IndexingStatusDialog.Designer.cs">
-      <DependentUpon>IndexingStatusDialog.cs</DependentUpon>
-    </Compile>
     <Compile Include="SearchResultListView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="SciTE.cs" />
+    <Compile Include="TextEditors\Director.cs" />
+    <Compile Include="TextEditors\Notepad.cs" />
+    <Compile Include="TextEditors\SciTE.cs" />
     <Compile Include="SearchDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,10 +79,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ConfigurationDialog.resx">
       <DependentUpon>ConfigurationDialog.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="IndexingStatusDialog.resx">
-      <DependentUpon>IndexingStatusDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="SearchResultListView.resx">
