--- a/trunk/Ndexer.csproj
+++ b/trunk/Ndexer.csproj
@@ -63,6 +63,12 @@
     <Compile Include="ConfigurationDialog.Designer.cs">
       <DependentUpon>ConfigurationDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddFilterDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddFilterDialog.Designer.cs">
+      <DependentUpon>AddFilterDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="SearchResultListView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -78,6 +84,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ConfigurationDialog.resx">
       <DependentUpon>ConfigurationDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddFilterDialog.resx">
+      <DependentUpon>AddFilterDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="SearchResultListView.resx">
