--- a/trunk/Ndexer.csproj
+++ b/trunk/Ndexer.csproj
@@ -69,6 +69,15 @@
     <Compile Include="AddFilterDialog.Designer.cs">
       <DependentUpon>AddFilterDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="FindInFilesDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindInFilesDialog.Designer.cs">
+      <DependentUpon>FindInFilesDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SearchResultListBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SearchResultListView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -88,6 +97,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddFilterDialog.resx">
       <DependentUpon>AddFilterDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FindInFilesDialog.resx">
+      <DependentUpon>FindInFilesDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="SearchResultListView.resx">
