--- a/trunk/Ndexer.csproj
+++ b/trunk/Ndexer.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{536F4E2B-A2C2-4E49-83A3-7CD5137B552E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -74,6 +74,10 @@
     </Compile>
     <Compile Include="FindInFilesDialog.Designer.cs">
       <DependentUpon>FindInFilesDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Hotkey.cs" />
+    <Compile Include="HotkeyControl.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="SearchResultListBox.cs">
       <SubType>Component</SubType>
